alignment of ads in footer to be correct on cobrands GS-1381

--- a/src/webapp/res/css/footer.css
+++ b/src/webapp/res/css/footer.css
@@ -1,9 +1,15 @@
     #footer {
         margin-left: auto;
         margin-right: auto;
-        width: 750px;
+        width: 100%;
         line-height: 10pt;
         font-size: .9em;
+        text-align: center;
+    }
+
+    #footerAd,
+    #footerGS {
+        text-align: center;
     }
 
     #footerGS {
